lesson-2/app/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: k8s-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /api/v1/(.*)
        backend:
          serviceName: k8s-app-backend
          servicePort: 8080
      - path: /*
        backend:
          serviceName: k8s-app-frontend
          servicePort: 8080
